corresponding classification notebook will push soon!

--- a/MITBIH_beat preparation_Shayan Like.ipynb
+++ b/MITBIH_beat preparation_Shayan Like.ipynb
@@ -36,6 +36,8 @@
         "##preparing test and train datasets according to Shayan Fazeli's paper:\n",
         "[Shayan's paper](https://arxiv.org/pdf/1805.00794.pdf)\n",
         "\n",
+        "Using MITBIH database.\n",
+        "\n",
         "This notebook contains only data preparation, not classification.\n",
         "\n"
       ]
